# goblet-get-request

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.goblet/: config.json
